--- a/rookiex/src/css/styles.css
+++ b/rookiex/src/css/styles.css
@@ -1,5 +1,5 @@
 .navbar{
-    height: 9vh;
+    height: 10vh;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -7,11 +7,37 @@
 }
 
 .logo{
-    height:100%;
+    margin-left: 2%;
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .logo img{
     margin-left: 10px;
     height: 4em;
     width: 5em;
+}
+
+.nav-items{
+    margin-right: 2%;
+    width: 100%;
+    height: 100%;
+}
+
+.nav-items{
+    display: flex;
+    flex-direction:row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+main{
+    width: 100%;
+    height: 100vh;
+}
+
+.init-Img img{
+    width: 100%;
+    height: 100%;
 }
