--- a/rookiex/src/css/styles.css
+++ b/rookiex/src/css/styles.css
@@ -11,6 +11,7 @@ body{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    
 }
 
 .logo{
@@ -51,6 +52,13 @@ body{
     opacity: 70%;
 }
 
+
+
+
+
+p{
+  color: white;
+}
 
 /*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
 
