--- a/rookiex/src/css/styles.css
+++ b/rookiex/src/css/styles.css
@@ -53,7 +53,32 @@ body{
 }
 
 .products{
-  margin-top: 0;
+  margin: 0 auto;
+  list-style: none;
+  margin: 0 auto;
+  padding: 0;
+
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+  gap: 30px;
+  max-width: 1300px;
+}
+
+form{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.product{
+  margin: 0 auto;
+  text-align: center;
+}
+
+.product img{
+  height: 300px;
 }
 
 .products ul{
