--- a/rookiex/src/css/styles.css
+++ b/rookiex/src/css/styles.css
@@ -4,15 +4,7 @@ body{
     margin: 0;
 }
 
-.navbar{
-    padding: 0.5em;
-    height: 10vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    
-}
+
 
 .logo{
     margin-left: 2%;
@@ -28,29 +20,109 @@ body{
 }
 
 
-.nav-items{
-    margin-right: 2%;
-    display: flex;
-    flex-direction:row;
-    justify-content: space-evenly;
-    align-items: center;
+
+
+
+
+
+
+
+
+.logo {
+  float: left;
+  height: 20;
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
+  
 }
 
-.nav-items a{
-    padding: 0 4em;
-    font-size: 18px;
-    text-decoration: none;
-    color: #DE6706;
+.logo img {
+  padding: 20px;
+  height: 4em;
+  width: 6em;
 }
 
-.rocaImage{
-    object-fit:cover;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    opacity: 70%;
+
+
+
+
+.imagen-inicio img {
+  
+  width: 100%;
+  height: 100vh;
+
 }
+
+.imagen-inicio{
+  position: relative;
+  z-index: -1;
+}
+
+.mensaje-inicial{
+  
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, .6);
+  color: #fff;
+  font-size: 36px;
+  text-align: center;
+}
+.mensaje-inicial h1{
+  width: 50%;
+}
+
+nav {
+  flex: 1;
+  margin: auto;
+  text-align: center;
+  width: 80%;
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+nav ul {
+  text-align: center;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  
+}
+
+
+
+
+
+span {
+  width: 100% !important;
+  color: #DE6706;
+  font-family: 'Fira Code', sans-serif;
+  font-size: 1.2em;
+  font-weight: bold;
+  padding: 10px;
+  border-radius: 5px;
+  transition: all .5s ease-out;
+  cursor: pointer;
+}
+
+
+
+span:hover {
+  text-shadow: 0 0 10px #DE6706;
+  outline: 2px solid #DE6706;
+  
+
+} 
+
+
+/*Style Catalogo*/
 
 .products{
   margin: 0 auto;
@@ -72,13 +144,27 @@ form{
   margin-bottom: 50px;
 }
 
-.product{
+.list-item{
   margin: 0 auto;
   text-align: center;
+  background-color: white;
+  border-radius: 10px;
+  border: #4b4d47 4px solid;
+  transition: all .1s ease-in;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
 }
 
-.product img{
-  height: 300px;
+.list-item:hover{
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+.list-item img{
+  width: 300px;
+  border-radius: 10px;
 }
 
 .products ul{
@@ -95,6 +181,48 @@ li{
 p{
   color: white;
 }
+
+.rock-image{
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+}
+.rock-image img{
+  width: 100%;
+  height: 100vh;
+  
+}
+.opacidad{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+  background-color: rgba(0, 0, 0, .85);
+}
+
+.button{
+  border: none;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  color: #b90f0f;
+  font-family:  sans-serif;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+.nav-bar{
+  border-bottom: 3px black solid;
+}
+
+
+
+/*Style catalogo*/
+
 
 /*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
 
@@ -207,18 +335,6 @@ p{
   
   
   
-  @keyframes fondo{
-    0% {
-      width: 0%;
-    }
-  
-    /* 50%{opacity: 50%;} */
-    100% {
-      width: 100%;
-    }
-  }
-  
-  
   
   
   .logo {
@@ -280,65 +396,14 @@ p{
     width: 50%;
   }
   
-  nav {
-    flex: 1;
-    margin: auto;
-    text-align: center;
-    width: 80%;
-    display: none;
-    justify-content: center;
-    align-items: center;
-  }
   
-  nav ul {
-    text-align: center;
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-  }
-  
-  nav ul li {
-    float: right;
-    text-decoration: none;
-    list-style: none;
-    animation: aparicion  ease-in;
-    
-  }
-  
-  nav ul li a {
-    text-decoration: none;
-    color: #60e2e7;
-  
-    padding: 10px;
-    border-radius: 5px;
-    transition: all .5s ease-out;
-  }
   
   nav ul li:last-child span{
     background-color: #730704;
   
   }
   
-  span {
-    width: 100% !important;
-    color: #DE6706;
-    font-family: 'Fira Code', sans-serif;
-    font-size: 1.2em;
-    font-weight: bold;
-    padding: 10px;
-    border-radius: 5px;
-    transition: all .5s ease-out;
-    cursor: pointer;
-  }
   
-  
-  
-  span:hover {
-    text-shadow: 0 0 10px #DE6706;
-    border: 2px solid #DE6706;
-    
-  
-  } 
   
   
   
