--- a/rookiex/src/components/Products.css
+++ b/rookiex/src/components/Products.css
@@ -1,5 +1,5 @@
 .products {
-  width: 100%;
+  padding: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -45,3 +45,4 @@
   object-fit: cover;
   background: #fff;
 }
+
